api validation updated
