# server/api.yaml
@@ -1,58 +1,373 @@
-openapi: 3.0.1
-info:
-  title: Example API with a single echo endpoint
-  version: 1.0.0
-components:
-  schemas:
-    Error:
-      type: object
-      properties:
-        error:
-          type: object
-          properties:
-            name:
-              type: string
-            message:
-              type: string
-            data:
-              type: array
-              items:
-                type: object
-          required:
-            - name
-            - message
-      required:
-        - error
-  responses:
-    error:
-      description: Default error response with error object
-      content:
-        application/json:
-          schema:
-            $ref: "#/components/schemas/Error"
-paths:
-  /echo:
-    post:
-      description: Echo input back
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                input:
-                  type: string
-              required:
-                - input
-      responses:
-        "200":
-          description: Echoed input
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  output:
-                    type: string
-        default:
-          $ref: "#/components/responses/error"
+{
+  "openapi": "3.0.0",
+  "info": {
+    "title": "System Security Protocols",
+    "version": "1.0.0"
+  },
+  "tags": [
+    {
+      "name": "General"
+    },
+    {
+      "name": "Schnor Identification Scheme"
+    }
+  ],
+  "components": {
+    "requestBodies": {
+      "SisInit": {
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "protocol_name": {
+                  "description": "name of protocol, must be `sis`",
+                  "type": "string",
+                  "example": "sis"
+                },
+                "payload": {
+                  "type": "object",
+                  "properties": {
+                    "A": {
+                      "description": "stringified integer value, multiple values should be separated by single space",
+                      "type": "string",
+                      "example": "12345 67890"
+                    },
+                    "X": {
+                      "description": "stringified integer value, multiple values should be separated by single space",
+                      "type": "string",
+                      "example": "12345 67890"
+                    }
+                  },
+                  "required": [
+                    "A",
+                    "X"
+                  ]
+                }
+              },
+              "required": [
+                "protocol_name",
+                "payload"
+              ]
+            }
+          }
+        }
+      },
+      "SisVerify": {
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "protocol_name": {
+                  "description": "name of protocol, must be `sis`",
+                  "type": "string",
+                  "example": "sis"
+                },
+                "session_token": {
+                  "description": "session token generated by server",
+                  "type": "string"
+                },
+                "payload": {
+                  "type": "object",
+                  "properties": {
+                    "s": {
+                      "description": "stringified integer value, multiple values should be separated by single space",
+                      "type": "string",
+                      "example": "12345 67890"
+                    }
+                  },
+                  "required": [
+                    "s"
+                  ]
+                }
+              },
+              "required": [
+                "protocol_name",
+                "session_token",
+                "payload"
+              ]
+            }
+          }
+        }
+      }
+    },
+    "responses": {
+      "SisInit": {
+        "description": "Response for `POST /protocols/sis/init` request.",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "session_token": {
+                  "description": "session token generated by server",
+                  "type": "string"
+                },
+                "payload": {
+                  "type": "object",
+                  "properties": {
+                    "c": {
+                      "description": "stringified integer value, multiple values should be separated by single space",
+                      "type": "string",
+                      "example": "12345 67890"
+                    }
+                  },
+                  "required": [
+                    "c"
+                  ]
+                }
+              },
+              "required": [
+                "session_token",
+                "payload"
+              ]
+            }
+          }
+        }
+      },
+      "SisVerify200": {
+        "description": "Response when verification was successfull.",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "verified": {
+                  "type": "boolean",
+                  "example": true
+                }
+              },
+              "required": [
+                "verified"
+              ]
+            }
+          }
+        }
+      },
+      "SisVerify403": {
+        "description": "Response when verification failed.",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "verified": {
+                  "type": "boolean",
+                  "example": false
+                }
+              },
+              "required": [
+                "verified"
+              ]
+            }
+          }
+        }
+      }
+    }
+  },
+  "paths": {
+    "/protocols/": {
+      "get": {
+        "tags": [
+          "General"
+        ],
+        "operationId": "listProtocolos",
+        "responses": {
+          "200": {
+            "description": "returns list of supported protocols",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "schemas": {
+                      "type": "array",
+                      "items": {
+                        "type": "string",
+                        "example": "sis"
+                      }
+                    }
+                  }
+                },
+                "example": [
+                  "sis",
+                  "ois"
+                ]
+              }
+            }
+          }
+        }
+      }
+    },
+    "/protocols/sis/init": {
+      "post": {
+        "tags": [
+          "Schnor Identification Scheme"
+        ],
+        "operationId": "sisProtocolInit",
+        "description": "Used to send A, X and obtain c",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "protocol_name": {
+                    "description": "name of protocol, must be `sis`",
+                    "type": "string",
+                    "example": "sis"
+                  },
+                  "payload": {
+                    "type": "object",
+                    "properties": {
+                      "A": {
+                        "description": "stringified integer value, multiple values should be separated by single space",
+                        "type": "string",
+                        "example": "12345 67890"
+                      },
+                      "X": {
+                        "description": "stringified integer value, multiple values should be separated by single space",
+                        "type": "string",
+                        "example": "12345 67890"
+                      }
+                    },
+                    "required": [
+                      "A",
+                      "X"
+                    ]
+                  }
+                },
+                "required": [
+                  "protocol_name",
+                  "payload"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Response for `POST /protocols/sis/init` request.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "session_token": {
+                      "description": "session token generated by server",
+                      "type": "string"
+                    },
+                    "payload": {
+                      "type": "object",
+                      "properties": {
+                        "c": {
+                          "description": "stringified integer value, multiple values should be separated by single space",
+                          "type": "string",
+                          "example": "12345 67890"
+                        }
+                      },
+                      "required": [
+                        "c"
+                      ]
+                    }
+                  },
+                  "required": [
+                    "session_token",
+                    "payload"
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/protocols/sis/verify": {
+      "post": {
+        "tags": [
+          "Schnor Identification Scheme"
+        ],
+        "operationId": "sisProtocolCommit",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "protocol_name": {
+                    "description": "name of protocol, must be `sis`",
+                    "type": "string",
+                    "example": "sis"
+                  },
+                  "session_token": {
+                    "description": "session token generated by server",
+                    "type": "string"
+                  },
+                  "payload": {
+                    "type": "object",
+                    "properties": {
+                      "s": {
+                        "description": "stringified integer value, multiple values should be separated by single space",
+                        "type": "string",
+                        "example": "12345 67890"
+                      }
+                    },
+                    "required": [
+                      "s"
+                    ]
+                  }
+                },
+                "required": [
+                  "protocol_name",
+                  "session_token",
+                  "payload"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Response when verification was successfull.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "verified": {
+                      "type": "boolean",
+                      "example": true
+                    }
+                  },
+                  "required": [
+                    "verified"
+                  ]
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Response when verification failed.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "verified": {
+                      "type": "boolean",
+                      "example": false
+                    }
+                  },
+                  "required": [
+                    "verified"
+                  ]
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
