# server/routes/schnorr.js
@@ -1,18 +1,7 @@
 const express = require('express');
 const router = express.Router();
 
-const storage = require('../storage/index.js');
-const fs = require("fs");
-const { OpenApiValidator } = require("express-openapi-validate");
-const jsYaml = require("js-yaml");
-
-const openApiDocument = jsYaml.safeLoad(
-  fs.readFileSync("../system_security_2/openapi/api.yaml", "utf-8")
-);
-const validator = new OpenApiValidator(openApiDocument);
-
-
-router.post('/init', validator.validate('post', '/protocols/sis/init'), async (req, res, next) => {
+router.post('/init', async (req, res, next) => {
 
   const c = 'string c value';
   // const session = await storage.createSession();
